fixing site overflow / footer / sidebar

--- a/style.css
+++ b/style.css
@@ -8,8 +8,6 @@ Author URI: http://joshreisner.com/
 Tags: blue, green, custom header, fixed width, two columns, widgets
 */
 
-html, body { height:100%; }
-
 body {
 	font-size:13px;
 	line-height:21px;
@@ -58,15 +56,13 @@ h2.pagetitle { margin:20px 0px 0px 20px; font-size:27px; }
 	border-width:0px 1px 0px 1px;
 	border-color:#9c9c9c;
 	border-style:solid;
-	position:relative;
-	min-height:120%;
 	text-align: left;
-	padding-bottom:40px;
 }
 
 #header {
 	background-color:#253148;
 	height:132px;
+	position: relative;
 }
 
 #searchform { position:absolute; top:20px; right:20px; }
@@ -115,7 +111,10 @@ h2.pagetitle { margin:20px 0px 0px 20px; font-size:27px; }
 #navigation li a:hover { text-decoration:none; background-color:#ddd; color:#000; background-image:none; }
 #navigation li.current_page_item a { background-color:#fff; background-image:none; color:#333; }
 
+#page { overflow: auto; position: relative; }
+
 #content { 
+	float: left;
 	margin:0px 0px 60px 0px;
 	width:644px;
 }
@@ -163,7 +162,7 @@ ol.commentlist p { margin:0px 0px 10px 0px; }
 #respond form textarea { width:600px; }
 
 #sidebar {
-	position:absolute;
+	float: left;
 	top:167px; bottom:0px; right:0px;
 	background:url(images/mountain.png) no-repeat;
 	margin:0px;
@@ -183,7 +182,6 @@ ol.commentlist p { margin:0px 0px 10px 0px; }
 #sidebar ul.about  { color:#b8d883; }
 #sidebar ul.about a { color:#b8d883; display:block; float:right; font-size:11px; }
 #sidebar ul.about a:hover { color:#fff; }
-
 
 #footer {
 	position:absolute; bottom:20px; left:20px; width:600px; font-size:12px; color:#888; line-height:18px; 
